--- a/MyScience/Begin/MyScience/GeoLocationMessageControl.xaml
+++ b/MyScience/Begin/MyScience/GeoLocationMessageControl.xaml
@@ -15,7 +15,7 @@
         </Grid.Background>
         <Button Content="continue" Height="72" HorizontalAlignment="Left" Margin="48,288,0,0" Name="continue" VerticalAlignment="Top" Width="160" Foreground="Black" BorderBrush="Black" Style="{StaticResource WhiteBackgroundButtonStyle}" Click="continue_Click" Background="Transparent" />
         <TextBlock Height="42" Margin="48,35,48,0" Name="msgtitle" Text="myscience" VerticalAlignment="Top" FontSize="29.333" FontWeight="Bold" Foreground="Black" />
-        <TextBlock x:Name="msgcontent" Margin="48,96,48,0" TextWrapping="Wrap" Text="MyScience requires location information to supplement the submitted data. Please continue only if you consent to provide MyScience with anonymized information on location at the time of data submission." VerticalAlignment="Top" Height="186" FontSize="21.333"/>
+        <TextBlock x:Name="msgcontent" Margin="48,96,48,0" TextWrapping="Wrap" Text="MyScience requires location information to supplement the submitted data. Please continue only if you consent to provide MyScience with anonymized information on location at the time of data submission." VerticalAlignment="Top" Height="186" FontSize="21.333" Foreground="Black"/>
         <Button Content="stay" Height="72" HorizontalAlignment="Left" Margin="272,288,0,0" Name="stay" VerticalAlignment="Top" Width="160" Foreground="Black" BorderBrush="Black" Style="{StaticResource WhiteBackgroundButtonStyle}" Click="stay_Click" Background="Transparent" />
     </Grid>
 </UserControl>
