--- a/new myscience/css/styles.css
+++ b/new myscience/css/styles.css
@@ -1,6 +1,6 @@
 html{background:#151515}
 body										{margin:0; background:#151515; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif}
-*											{margin:0; padding:0}
+*											{margin:0; padding: 0px;}
 a											{outline:0; text-decoration:none}
 img											{border:0}
 h1,h2,h3,h4,h5,h6							{font-weight:normal}
